--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "type": "git",
     "url": "https://github.com/licson0729/PollEndpoint"
   },
-
   "engines": {
     "node": ">= 0.6.0",
     "npm": ">= 1.0.0"
   },
-
   "dependencies": {
+	  "express":">= 3.0.0",
+	  "ejs":">= 0.8.3",
+	  "mysql":">= 2.0.0-alpha7"
   },
   "devDependencies": {},
   "bundleDependencies": [],
