--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
 	  "express":">= 3.0.0",
 	  "ejs":">= 0.8.3",
-	  "mysql":">= 2.0.0-alpha7"
+	  "mysql":">= 2.0.0-alpha7",
+	  "nodefly":"stable"
   },
   "devDependencies": {},
   "bundleDependencies": [],
